spring-user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-user-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-user
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-user
    spec:
      containers:
        - name: spring-user
          image: cuonglyy/spring-user:v1
          ports:
            - containerPort: 8081
