spring-user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-user-service
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 9091
      targetPort: 8081
  selector:
    name: spring-user
